--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 
-    <div id="contenedor">
-        Logistica para Ya!
+    <div id="contenedor" >
+       <h2> Logistica para Ya! </h2> 
     </div>
+
+    <div>
+        <img src="images.jpg" alt="chimuelo">
+    </div>
+
     
 </body>
 </html>
